--- a/New folder (2)/index.html
+++ b/New folder (2)/index.html
@@ -11,7 +11,7 @@
             --bg-color: #1a1a2e;
             --card-bg: #16213e;
             --text-color: #e94560;
-            --text-secondary: #0f3460;
+            --text-secondary: #d2d8df;
         }
 
         body {
