--- a/New folder (2)/index.html
+++ b/New folder (2)/index.html
@@ -156,7 +156,7 @@
 </head>
 <body>
     <video autoplay muted loop class="background-video">
-        <source src="loop.mp4" type="video/mp4">
+        <source src="./loop.mp4" type="video/mp4">
         <!-- Fallback content in case the video doesn't load -->
         Your browser does not support HTML5 video.
     </video>
