--- a/New folder (2)/index.html
+++ b/New folder (2)/index.html
@@ -14,16 +14,13 @@
             --text-secondary: #d2d8df;
             --highlight-bg: rgba(233, 69, 96, 0.1);
         }
-        h2{
+        h2 {
             -webkit-text-fill-color: rgb(231, 255, 18);
         }
 
         body {
             font-family: 'Poppins', sans-serif;
-            background-image: url("back.png");
             background-color: var(--bg-color);
-            background-size: cover;
-            background-position: center;
             color: var(--text-color);
             margin: 0;
             padding: 0;
@@ -36,6 +33,8 @@
         .container {
             max-width: 1200px;
             padding: 2rem;
+            z-index: 1;
+            position: relative;
         }
 
         header {
@@ -133,33 +132,33 @@
             font-size: 0.875rem;
             color: var(--text-secondary);
         }
+
         .background-video {
             position: fixed;
-            top: 0;
-            left: 0;
-            width: 100vw;
-            height: 100vh;
+            top: 50%;
+            left: 50%;
+            width: 100%;
+            height: 100%;
+            transform: translate(-50%, -50%);
             object-fit: cover;
             z-index: -1;
         }
 
-        /* Main Content */
-        .container {
-            max-width: 1200px;
-            padding: 2rem;
-            z-index: 1;
-            position: relative;
+        /* Responsive adjustments */
+        @media (max-width: 768px) {
+            .background-video {
+                display:flex;
+            }
         }
-       
     </style>
     <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 <body>
-    <video autoplay muted loop class="background-video">
+    <video autoplay muted loop playsinline class="background-video">
         <source src="./loop.mp4" type="video/mp4">
-        <!-- Fallback content in case the video doesn't load -->
         Your browser does not support HTML5 video.
     </video>
+    
     <div class="container">
         <header>
             <h1>ISHRAE JU</h1>
